--- a/wishlist.html
+++ b/wishlist.html
@@ -12,18 +12,15 @@
 
     <div class="container">
         <header>
-            <a href="./"  ><img src="Images/Logo.png" alt="Logo for Xavier's Portal"></a>
+            <a href="./" ><img src="Images/Logo.png" alt="Logo for Xavier's Portal"></a>
 
-       
         </header>
           
         <nav></nav>
 
         <main>
-            <h1>Hello there!</h1>
-            <p>This is a web portal with things regarding me Xavier</p>
-            <p>cause like, it's called Xavier's Portal...</p>
-            <a href="./wishlist "  >Wishlists</a>
+            <h1>Wishlist Portal</h1>
+            <a href="https://www.amazon.com/hz/wishlist/ls/1IBAWKB7373B5?ref_=wl_share" target="_blank" >Amazon Wishlist</a>
         </main>
 
         <footer></footer>
