--- a/wishlist.html
+++ b/wishlist.html
@@ -16,11 +16,16 @@
 
         </header>
           
-        <nav></nav>
+        <nav>
+            <a href="./">Home</a>
+            <a href="./wishlist">Wishlists</a>
+
+        </nav>
 
         <main>
             <h1>Wishlist Portal</h1>
             <a href="https://www.amazon.com/hz/wishlist/ls/1IBAWKB7373B5?ref_=wl_share" target="_blank" >Amazon Wishlist</a>
+
         </main>
 
         <footer></footer>
