--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" , initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
     <link rel="stylesheet" href="Style.css" />
     <title>Xavier's Portal</title>
@@ -17,7 +17,11 @@
        
         </header>
           
-        <nav></nav>
+        <nav>
+            <a href="./">Home</a>
+            <a href="./wishlist" >Wishlists</a>
+
+        </nav>
 
         <main>
             <h1>Hello there!</h1>
