--- a/wishlist.html
+++ b/wishlist.html
@@ -25,6 +25,7 @@
         <main>
             <h1>Wishlist Portal</h1>
             <a href="https://www.amazon.com/hz/wishlist/ls/1IBAWKB7373B5?ref_=wl_share" target="_blank" >Amazon Wishlist</a>
+            <p> <a href="https://www.blurb.com/b/11684030-scars-on-the-network#" target="_blank" >Art catalouge book </a> </p> 
 
         </main>
 
